# core

./: .env.example  .env.test  README.md  SETUP.md  TESTING.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_tests.sh  schema.sql  setup.py
.github/workflows/: ci.yml
http-requests/: README.md  ai-search.http  health-and-categories.http  http-client.env.json  sql-search.http
scripts/: run_tests.sh
src/: config.py
src/api/: app.py
src/consumer/: sqs_consumer.py
src/database/: connection.py  events.py
src/llm/: embeddings.py  extraction.py  llm_factory.py  vector_store.py
src/models/: event.py
src/utils/: text_processing.py
tests/: conftest.py  test_api.py  test_simple.py  test_sqs_consumer.py
tests/functional/: test_consumer_scenarios.py  test_full_flow.py
tests/unit/: test_database_operations.py  test_text_processing.py
